website/static/css/custom.css
/* ... */
code.language-tile38-cli .hljs-comment {
  color: #75715e;
}
code.language-tile38-cli .hljs-geojson {
  color: #e6db74;
}

/********************************/
/* COMMANDS FILTER TABS
/********************************/
/* .commandsContainer {
  max-width: 860px;
} */

/* .commandsWrapper {
  justify-content: center;
} */

.commandtable {
  margin-bottom: 1.5em;
}

.filterbar {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  /* justify-content: space-between; */
  padding: 0 0;
  margin-bottom: 15px;
}

.filterbar a {
  font-size: 18px;
  margin-top: 0;
  margin-right: 12px;
  color: black;
}

.filterbar a.active {
  font-weight: 700;
}

.commands-list a {
  color: black;
  display: flex;
  padding: 5px 10px;
  margin: 0 -10px;
}

.commands-list a:hover {
  background-color: rgba(97, 135, 159, 0.15);
}

.commands-list a.command .nameargs {
  float: left;
}

.commands-list a.command .nameargs .name {
  color: black;
  font-weight: 700;
}

.commands-list a:hover.command .nameargs .name {
  color: #0d6c9b;
}

.commands-list a.command .summary {
  float: right;
  margin-left: 12px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/********************************/
/* PREV/NEXT BUTTONS
/********************************/
.docs-prev,
.docs-next {
  color: default;
  background: default;
  color: initial;
  background: initial;
  border: 1px solid #0d6c9b;
}

/********************************/
/* FOOTER
/********************************/
.nav-footer {
  margin-top: 80px;
  background-color: #191a1a;
}
.nav-footer .sitemap {
  max-width: 1400px;
  padding: 0 30px;
}

.nav-footer .copyright {
  color: rgba(255, 255, 255, 0.6);
  text-align: left;
}

div.docs,
div.community,
div.more {
  text-align: right;
}

@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
}

@media only screen and (max-width: 736px) {
  .toggleNav h2 i {
    font-style: normal;
  }
  .nav-footer .sitemap {
    padding: 0;
  }

  div.docs,
  div.community,
  div.more {
    text-align: left;
  }
}

@media only screen and (min-width: 765px) {
  /* COMMANDS FILTERING CONTAINER */
  .commandsWrapper {
    justify-content: center;
  }
}

@media only screen and (min-width: 1024px) {
  .fixedHeaderContainer {
    height: 80px;
    padding-top: 25px;
  }

  .homeContainer {
    padding-top: 30px;
  }

  .docsNavContainer {
    margin-top: 80px;
    position: static;
    overflow-y: visible;
  }

  nav.toc {
    padding: 0 0;
  }

  .onPageNav {
    margin-top: 80px;
  }

  .documentContainer > .wrapper {
    margin-top: 80px;
  }

  /* GET TILE38 BUTTON */
  .navigationSlider .slidingNav ul li a.tile38NavButton {
    padding: 20px 16px;
    top: -5px;
    margin-left: 8px;
    position: relative;
    border-radius: 6px;
    color: default;
    background: default;
    color: initial;
    background: initial;
    border: 1px solid #0d6c9b;
  }

  .navigationSlider .slidingNav ul li a.tile38NavButton:hover,
  .navigationSlider .slidingNav ul li > a.tile38NavButton:focus,
  .navigationSlider .slidingNav ul li > a.tile38NavButton:hover {
    color: white;
    background: #0d6c9b;
    transition: 0.4s;
  }

  /* EDIT LINK BUTTON */
  .edit-page-link {
    font-size: 12px;
    color: default;
    background: default;
    color: initial;
    background: initial;
    border: 1px solid #0d6c9b;
  }

  /* FOOTER */
  .nav-footer .sitemap div {
    flex: unset;
  }
  .nav-footer .sitemap div.legal {
    width: 50%;
  }
}

@media only screen and (max-width: 1023px) {
  /*
    - add some top space to header logo in top nav 
    - remove bottom border to get rid of white space showing up 
      b/t logo and navbar
  */
  .fixedHeaderContainer {
    padding-top: 18px;
    border-bottom: 0px;
    justify-content: center;
  }

  .fixedHeaderContainer header img {
    margin-right: 0;
  }

  /* remove white space b/t logo and navbar */
  ul.nav-site.nav-site-internal {
    margin-top: 60px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
  }

  /* ul.nav-site.nav-site-internal li {
    flex: 1 1;
  } */

  .navigationSlider .slidingNav ul li a {
    padding: 0;
  }

  div.mainContainer.homeContainer {
    padding: 0 0;
  }

  .docsNavContainer {
    margin-top: 10px;
  }

  /* center tile38 logo in header */
  .fixedHeaderContainer header {
    justify-content: center;
  }

  /* align left and right margins of nav and page contents on small screens */
  .wrapper {
    padding: 0 30px;
  }

  .docsNavContainer .toc .navBreadcrumb {
    padding: 8px 30px;
  }

  /* bring onPageNav to front if hamburger button has been toggled first */
  .tocActive .onPageNav {
    z-index: 999;
    top: 160px;
  }

  /* add padding to onPageNav toc headings when toggled */
  .tocActive .onPageNav > .toc-headings {
    padding: 20px 10px;
  }

  /* add padding to hamburger button categories when toggled */
  .docsSliderActive .toc section .navGroups {
    padding: 70px 30px;
  }

  /* add hide of hamburger button on dots toggle */
  .tocActive .navToggle,
  .tocActive .navBreadcrumb h2 {
    opacity: 0;
    transition: visibility 0s 0.1s, opacity 0s linear;
  }

  /* COMMAND FILTERBAR */
  .filterbar .right-group {
    justify-content: flex-start;
  }
}

@media only screen and (min-width: 1400px) {
}

@media only screen and (min-width: 1500px) {
}

